Closed Bug 226012 Opened 22 years ago Closed 22 years ago

nsMsgDBView.h:73: warning: comma at end of enumerator list

Categories

(MailNews Core :: Database, defect)

x86
Linux
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: timeless, Assigned: timeless)

Details

Attachments

(1 file)

/mnt/ibm/mozhack/mozilla/mailnews/base/src/nsMsgDBView.h: 73: warning: comma at end of enumerator list
Attached patch remove commaSplinter Review
Attachment #135750 - Flags: superreview?(roc)
Attachment #135750 - Flags: review?(roc)
Attachment #135750 - Flags: superreview?(roc)
Attachment #135750 - Flags: superreview+
Attachment #135750 - Flags: review?(roc)
Attachment #135750 - Flags: review+
checked in
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Product: MailNews → Core
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: