Bug 226012 nsMsgDBView.h:73: warning: comma at end of enumerator list r=roc sr=roc